src/ui/snapshots/mathypad__ui__tests__results_panel_rendering.snap
---
source: src/ui/tests.rs
expression: output
---
"┌Results───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│   1 8                                                                                                                │"
"│   2 22.046 lb                                                                                                        │"
"│   3 16                                                                                                               │"
"│   4 0.5                                                                                                              │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
