src/ui/snapshots/mathypad__ui__tests__save_as_dialog_placeholder.snap
---
source: src/ui/tests.rs
expression: output
---
"┌Mathypad──────────────────────────────────────────────────────────────────────────────────────┐┌Results───────────────┐"
"│   1 5 + 3                                                                                    ││   1 8                │"
"│   2 10 kg to lb                                                                              ││   2 22.046 lb        │"
"│   3 line1 * 2                                                                                ││   3 16               │"
"│   4 sin(30 degrees)                                                                          ││   4 0.5              │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                             ┌ Save As ─────────────────────────────────────────────────┐     ││                      │"
"│                             │Filename: [filename].pad                                  │     ││                      │"
"│                             │                                                          │     ││                      │"
"│                             │Enter - Save    Esc - Cancel                              │     ││                      │"
"│                             │                                                          │     ││                      │"
"│                             └──────────────────────────────────────────────────────────┘     ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────┘"
