src/ui/snapshots/mathypad__ui__tests__scrolled_content.snap
---
source: src/ui/tests.rs
expression: output
---
"┌Mathypad──────────────────────────────────────────────────────────────────────────────────────┐┌Results───────────────┐"
"│  11 line 11 content                                                                          ││  11                  │"
"│  12 line 12 content                                                                          ││  12                  │"
"│  13 line 13 content                                                                          ││  13                  │"
"│  14 line 14 content                                                                          ││  14                  │"
"│  15 line 15 content                                                                          ││  15                  │"
"│  16 line 16 content                                                                          ││  16                  │"
"│  17 line 17 content                                                                          ││  17                  │"
"│  18 line 18 content                                                                          ││  18                  │"
"│  19 line 19 content                                                                          ││  19                  │"
"│  20 line 20 content                                                                          ││  20                  │"
"│  21 line 21 content                                                                          ││  21                  │"
"│  22 line 22 content                                                                          ││  22                  │"
"│  23 line 23 content                                                                          ││  23                  │"
"│  24 line 24 content                                                                          ││  24                  │"
"│  25 line 25 content                                                                          ││  25                  │"
"│  26 line 26 content                                                                          ││  26                  │"
"│  27 line 27 content                                                                          ││  27                  │"
"│  28 line 28 content                                                                          ││  28                  │"
"│  29 line 29 content                                                                          ││  29                  │"
"│  30 line 30 content                                                                          ││  30                  │"
"│  31 line 31 content                                                                          ││  31                  │"
"│  32 line 32 content                                                                          ││  32                  │"
"│  33 line 33 content                                                                          ││  33                  │"
"│  34 line 34 content                                                                          ││  34                  │"
"│  35 line 35 content                                                                          ││  35                  │"
"│  36 line 36 content                                                                          ││  36                  │"
"│  37 line 37 content                                                                          ││  37                  │"
"│  38 line 38 content                                                                          ││  38                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────┘"
