src/ui/snapshots/mathypad__ui__tests__separator_indicator_dragging.snap
---
source: src/ui/tests.rs
expression: output
---
"┌Mathypad──────────────────────────────────────────────────────────────────────────────────────▐┌Results───────────────┐"
"│   1 5 + 3                                                                                    ▐│   1 8                │"
"│   2 10 kg to lb                                                                              ▐│   2 22.046 lb        │"
"│   3 line1 * 2                                                                                ▐│   3 16               │"
"│   4 sin(30 degrees)                                                                          ▐│   4 0.5              │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"│                                                                                              ▐│                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────▐└──────────────────────┘"
